# CPulse

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CPulse.cpp  CPulse.h  README.TXT  README.md  arithmetic_expressions.txt
CPulse/: CPulse.vcxproj  CPulse.vcxproj.filters
Classes/: AST.CPP  AST.h  CodeGenerator.cpp  CodeGenerator.h  Evaluator.cpp  Evaluator.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  TypedVector.cpp  TypedVector.h  Value.h
Classes/AST/: AST.h
Classes/CodeGenerator/: CodeGenerator.cpp  CodeGenerator.h
Classes/CodeGenerator/Evaluator/: Evaluator.cpp  Evaluator.h
Classes/CodeGenerator/Evaluator/ControlFlow/: ControlFlowEvaluator.cpp  ControlFlowEvaluator.h
Classes/CodeGenerator/Evaluator/Expression/: ExpressionNodeEvaluator.cpp  ExpressionNodeEvaluator.h
Classes/CodeGenerator/Evaluator/Function/: FunctionNodeEvaluator.cpp  FunctionNodeEvaluator.h  ReturnNodeEvaluator.cpp  ReturnNodeEvaluator.h
Classes/CodeGenerator/Evaluator/Handler/: FunctionHandler.cpp  FunctionHandler.h
Classes/CodeGenerator/Evaluator/IO/: IONodeEvaluator.cpp  IONodeEvaluator.h
Classes/CodeGenerator/Evaluator/List/: ListNodeEvaluator.cpp  ListNodeEvaluator.h
Classes/CodeGenerator/Evaluator/Primitive/: PrimitiveNodeEvaluator.h
Classes/CodeGenerator/Evaluator/Utility/: EvaluatorHelper.h
Classes/CodeGenerator/Evaluator/Variable/: VariableNodeEvaluator.cpp  VariableNodeEvaluator.h
Classes/CodeGenerator/Operation/ArithmeticOperations/: ArithmeticOperations.cpp  ArithmeticOperations.h
Classes/CodeGenerator/Operation/ComparisonOperations/: ComparisonOperations.cpp  ComparisonOperations.h
Classes/CodeGenerator/Operation/LogicalOperations/: LogicalOperations.cpp  LogicalOperations.h
Classes/CodeGenerator/Operation/OperationDispatcher/: OperationDispatcher.cpp  OperationDispatcher.h
Classes/CodeGenerator/Operation/StringOperations/: StringOperations.cpp  StringOperations.h
Classes/CodeGenerator/Operation/UnaryOperations/: UnaryOperations.cpp  UnaryOperations.h
Classes/CodeGenerator/Utility/: PrintOperations.cpp  PrintOperations.h
Classes/Enums/: ScopeType.cpp  ScopeTypes.cpp  ScopeTypes.h  TokenType.cpp  TokenType.h  TokenTypes.cpp  TokenTypes.h  VariableTypes.cpp  VariableTypes.h
Classes/Evaluators/ControlFlow/: ControlFlowEvaluator.cpp  ControlFlowEvaluator.h
Classes/Evaluators/Expression/: ExpressionNodeEvaluator.cpp  ExpressionNodeEvaluator.h
Classes/Evaluators/Function/: FunctionNodeEvaluator.cpp  FunctionNodeEvaluator.h  ReturnNodeEvaluator.cpp  ReturnNodeEvaluator.h
Classes/Evaluators/Handler/: FunctionHandler.cpp  FunctionHandler.h
Classes/Evaluators/IO/: IONodeEvaluator.cpp  IONodeEvaluator.h
Classes/Evaluators/List/: ListNodeEvaluator.cpp  ListNodeEvaluator.h
Classes/Evaluators/Primitive/: PrimitiveNodeEvaluator.cpp  PrimitiveNodeEvaluator.h
Classes/Evaluators/Utility/: EvaluatorHelper.h
Classes/Evaluators/Variable/: VariableNodeEvaluator.cpp  VariableNodeEvaluator.h
Classes/Function/: Function.h
Classes/Lexer/: Lexer.cpp  Lexer.h
Classes/Parser/: Parser.cpp  Parser.h
Classes/Parser/Expression/: ExpressionParser.cpp  ExpressionParser.h
Classes/Parser/Primary/: PrimaryParser.cpp  PrimaryParser.h
Classes/Parser/Statement/: StatementParser.cpp  StatementParser.h
Classes/Structs/: Token.h  Value.h  ValueHelper.h
Classes/Structs/Function/: FunctionContext.h  Parameter.h
Classes/Structs/Functions/: Function.h  FunctionContext.h
Classes/Structs/Map/: KeywordMap.h  OperatorMap.h
Classes/Structs/Maps/: KeywordMap.cpp  KeywordMap.h  OperatorMap.cpp  OperatorMap.h
Classes/Structs/Token/: Token.h  VariableToken.h
Classes/Structs/Value/: ValueHelper.h
Classes/TypedVector/: TypedVector.cpp  TypedVector.h
Classes/Value/: Value.h
